# geobrix

./: .dockerignore  .gitattributes  .gitignore  .maven-keys.list  CLAUDE.md  CODEOWNERS  README.md  SECURITY.md  pom.xml
python/geobrix/: pyproject.toml  requirements-build.in  requirements-build.txt  requirements-ci.in  requirements-ci.txt  requirements-dev-container.in  requirements-dev-container.txt  requirements-pyrx-ci.in  requirements-pyrx-ci.txt
python/geobrix/src/databricks/labs/gbx/: _geom.py  _register.py
python/geobrix/src/databricks/labs/gbx/bench/: cluster.py  compare.py  corpus_vector.py  datagen.py  fingerprint.py  manifest.py  readers.py  registered_functions.txt  results.py  runner.py  spec.py  (+2 more)
python/geobrix/test/: conftest.py  test_geom_shared.py  test_register_helper.py
python/geobrix/test/bench/: conftest.py  test_changed.py  test_cluster.py  test_cluster_pmtiles.py  test_cluster_vector.py  test_compare.py  test_corpus_vector.py  test_datagen.py  test_fingerprint.py  test_geometry_corpus.py  test_manifest.py  test_readers_bench.py  test_readers_pmtiles.py  test_readers_vector.py  test_results.py  test_runner.py  test_scorecard.py  test_spec.py  test_store.py  test_synth.py  test_writer_bench.py
python/geobrix/test/ds/: conftest.py  test_encode.py  test_geojsonl_writer.py  test_gtiff_datasource.py  test_listing.py  test_pmtiles.py  test_pmtiles_agg_parity.py  test_pmtiles_naming.py  test_pmtiles_parity.py  test_pmtiles_reader.py  test_raster_bbox.py  test_raster_datasource.py  test_reader_parity.py  test_register.py  test_register_only.py  test_scratch_isolation.py  test_spark_uri.py  test_vector_filename.py  test_vector_named.py  test_vector_parity.py  test_vector_reader.py  test_vector_reader_contract.py  test_vector_schema.py  test_vector_writer.py  test_vector_writer_parity.py  test_window.py  test_write_helper.py  test_writer.py  test_writer_col_roles.py  test_writer_parity.py  test_xyz_mosaic.py
python/geobrix/test/ds/tiles/: conftest.py  test_backend.py  test_catalog.py  test_grid.py  test_header.py  test_shard.py
python/geobrix/test/gridx/: test_bng_functions.py
python/geobrix/test/gridx/custom/: test_custom_grid.py
python/geobrix/test/gridx/quadbin/: test_quadbin.py  test_quadbin_cellunion_agg.py
python/geobrix/test/perf/: test_vectorscan.py
python/geobrix/test/pmtiles/: test_pmtiles.py
python/geobrix/test/pmtiles_bindings/: test_pmtiles.py
python/geobrix/test/pmtiles_light/: conftest.py  test_agg_light_core.py  test_agg_light_udf.py  test_inspect.py  test_parity_pmtiles_merge.py  test_serverless_safety.py
python/geobrix/test/pygx/: conftest.py  test_bng_cellmath.py  test_bng_codec.py  test_bng_geometry.py  test_bng_geomk_chipops.py  test_bng_neighborhood.py  test_bng_polyfill.py  test_bng_tessellate.py  test_bng_udf.py  test_custom_core.py  test_custom_udf.py  test_geom.py  test_parity_bng.py  test_parity_custom.py  test_parity_quadbin.py  test_quadbin_core.py  test_quadbin_udf.py  test_quadbin_vec.py  test_register_only.py
python/geobrix/test/pyrx/: conftest.py  test_core_accessors.py  test_core_accessors_stats.py  test_core_agg.py  test_core_analysis.py  test_core_bandmath.py  test_core_cellraster.py  test_core_clip_reproject.py  test_core_colorrelief.py  test_core_coords.py  test_core_derivedband.py  test_core_edit.py  test_core_features.py  test_core_focal.py  test_core_geom_raster_align.py  test_core_gridagg.py  test_core_gridagg_vectorized.py  test_core_index.py  test_core_indices.py  test_core_mapalgebra.py  test_core_nodata.py  test_core_ops.py  test_core_polygonize.py  test_core_resample.py  test_core_terrain.py  test_core_tessellate.py  test_core_tessellate_modes.py  test_core_tiling.py  test_core_tin.py  test_core_warp.py  test_core_xyz.py  test_cross_language_xyz_parity.py  test_docs_examples.py  test_env.py  test_escape.py  test_functions_spark.py  test_h3_gridspec.py  test_h3_rasterize_agg.py  test_h3_rasterize_fcc.py  test_h3_rasterize_validate.py  (+5 more)
python/geobrix/test/pyrx/data/: fcc_uflw_miamidade_subset.csv
python/geobrix/test/pyrx/ds/: test_encode.py  test_gtiff_datasource.py  test_listing.py  test_raster_datasource.py  test_reader_parity.py  test_register.py  test_tiling.py  test_write_helper.py  test_writer.py  test_writer_parity.py
python/geobrix/test/pyvx/: conftest.py  test_asmvt.py  test_asmvt_pyramid.py  test_env.py  test_geom.py  test_legacy.py  test_legacy_udf.py  test_mvt_encode.py  test_parity_h3_tessellate.py  test_parity_legacy.py  test_parity_mvt.py  test_parity_tin.py  test_register_only.py  test_tin_core.py  test_tin_udtf.py
python/geobrix/test/rasterx/: _helpers.py  test_analysis.py  test_dem_processing.py  test_dtmfromgeoms.py  test_frombands_agg.py  test_h3_rasterize_parity.py  test_pixel_ops.py  test_quadbin_aggregators.py  test_rasterize_agg.py  test_rasterx_accessors.py  test_rasterx_generators.py  test_rasterx_operations.py  test_rasterx_registration.py  test_rasterx_tile_structure.py  test_resample_idw.py  test_spectral_indices.py  test_vector_raster_bridge.py  test_webmercator_tiles.py
python/geobrix/test/sample/: _fake_overture_catalog.py  test_dem.py  test_naip.py  test_overture.py  test_overture_discover.py  test_sample_bundle.py
python/geobrix/test/stac/: _fake_catalog.py  test_client.py  test_download.py  test_download_bbox.py  test_env_v5_compat.py  test_package.py  test_repair.py  test_search.py  test_serverless_no_spark_config.py  test_sign.py
python/geobrix/test/vectorx/: test_legacy_registration.py  test_st_asmvt.py  test_st_asmvt_pyramid.py  test_tin_functions.py  test_tin_mode_wrapper.py
python/geobrix/test/viz/: test_env.py  test_raster.py  test_vector.py
python/geobrix/test/vizx/: test_cell_output_cap.py  test_cog.py  test_cog_ax.py  test_cog_zorder.py  test_dynamic.py  test_emphasis.py  test_env.py  test_exports.py  test_interactive.py  test_interactive_maplibre.py  test_ladder.py  test_layers.py  test_maplibre.py  test_pmtiles.py  test_pmtiles_autofit.py  test_raster.py  test_simplify.py  test_static_layers.py  test_static_map.py  test_vector.py
(+804 files in other folders)
