[project]
name = "geobrix"
authors = [
    { name = "Michael Johns" },
    { name = "Stuart Lynn" },
    { email = "labs@databricks.com"}
]
dynamic = ["version"]
description = "GeoBriX: A high-performance spatial processing library for Apache Spark."
readme = "README.md"
requires-python = ">=3.10, <3.13"

# PEP 639 SPDX expression form. setuptools >=77 deprecated the table form
# (`{ text = ... }` / `{ file = ... }`) and warns on every build by 2027-Feb-18.
# Proprietary licenses use the `LicenseRef-<id>` namespace per PEP 639;
# canonical license text lives in ../../LICENSE at the repo root.
license = "LicenseRef-Databricks-Proprietary"
classifiers = [
    # PEP 639: License classifiers are forbidden once `project.license` is a SPDX
    # expression — setuptools >=77 raises InvalidConfigError on overlap.
    # The license is expressed above via `license = "LicenseRef-Databricks-Proprietary"`.
    "Topic :: Scientific/Engineering :: GIS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    'Operating System :: OS Independent'
]
dependencies = [
    "pyspark>=4.0.0",
]

[project.urls]
Homepage = "https://databricks.com/learn/labs"
Repository = "https://github.com/databrickslabs/geobrix"
Documentation = "https://databrickslabs.github.io/geobrix/"

[project.optional-dependencies]
dev = [
    "isort",
    "black",
    "flake8",
    "flake8-pyproject",
    "build",
]
test = [
    "pytest>=7.0",
    "shapely>=2.0.0",
    "rasterio>=1.3.0",
    "numpy>=1.24.0",
]
# Runtime deps for the lightweight pure-Python/PySpark APIs (no JAR) — the umbrella
# extra covering all light tiers (raster today; vector/grid as they land). Install
# with `pip install geobrix[light]`.
# pandas + pyarrow are required by pyspark pandas_udf (Arrow batch serialization);
# base pyspark does NOT pull them, so without these the rst_* wrappers fail to
# import (_udf.py imports pandas) / at first invocation with a cryptic ImportError.
light = [
    "rasterio>=1.3.0",
    "shapely>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyarrow>=11.0.0",
    "scipy>=1.11.0",
    "numexpr>=2.8.0",
    # rio-tiler 9 uses TypedDict(extra_items=...) (PEP 728), which needs a recent
    # typing_extensions; DBR 17.3 ships an older one, so pin the floor explicitly
    # or the [light] import fails on-cluster (rio_tiler/types.py TypeError).
    "typing_extensions>=4.13",
    "rio-tiler>=9.0,<10",
    # rio-tiler -> httpx -> httpcore (which needs h11>=0.16). DBR ships an older
    # httpcore 1.0.2 (pinned h11<0.15) that %pip leaves in place, so it conflicts
    # with the h11>=0.16 the stack pulls. Force httpcore>=1.0.9 so the on-cluster
    # install resolves cleanly (no h11 conflict warning).
    "httpcore>=1.0.9",
    "rio-cogeo>=7.0,<8",
    "h3>=4.0,<5",
    "quadbin>=0.2,<0.3",
    # Protomaps PMTiles archive writer/reader (pure-Python) for the pmtiles_gbx
    # tiled-output backend. Writer needs ascending tileid; Reader used in tests.
    "pmtiles>=3.4,<4",
    # OGR-free vector reading for the light *_gbx vector DataSources. pyogrio
    # bundles its own libgdal; pyproj (pulled by pyogrio) maps CRS->srid/proj4.
    "pyogrio>=0.12,<1",
    "pyproj>=3.6",
    "scikit-image>=0.22,<1",
    "xarray-spatial>=0.4,<1",
]
# For sample-data bundle uploads to Unity Catalog Volumes and gbx:test:bundle-databricks
databricks = [
    "databricks-sdk",
]

[tool.coverage.run]
# Exclude sample-data bundle from coverage total so reported % reflects main library (gridx, rasterx, vectorx)
# Multiple patterns ensure exclusion when paths are relative (src/...) or absolute; required for CI and local.
omit = [
    "*sample/_bundle.py",
    "*_bundle.py",
    "src/databricks/labs/gbx/sample/_bundle.py",
    "databricks/labs/gbx/sample/_bundle.py",
    "python/geobrix/src/databricks/labs/gbx/sample/_bundle.py",
]

[tool.coverage.report]
exclude_lines = ["pragma: no cover"]

[tool.pytest.ini_options]
pythonpath = [ "src" ]
markers = [
    "integration: tests that need network or long-running setup (excluded from CI)",
]
filterwarnings = [
    "ignore:Support for class-based .* config.* deprecated:",
    "ignore:Neither gdal.UseExceptions:FutureWarning",
]

[build-system]
requires = ["setuptools>=61.2", "wheel"]

[tool.setuptools]
include-package-data = false

# databricks.labs.* must be PEP 420 namespace packages (no __init__.py at
# databricks/ or databricks/labs/) so they coexist with databricks-sdk /
# databricks-connect, which share the `databricks` namespace. find_namespace
# discovery includes the gbx subpackages without those shadowing __init__ files.
[tool.setuptools.packages.find]
where = ["src"]
# Only the gbx subtree is a real package; databricks/ and databricks/labs/ stay
# pure PEP 420 namespace dirs (no __init__.py, not listed) so setuptools doesn't
# synthesize empty __init__.py for them in the wheel (which would re-shadow
# databricks-sdk). namespaces=true keeps PEP 420 discovery for the subtree.
include = ["databricks.labs.gbx*"]
namespaces = true

[tool.setuptools.package-data]
geobrix = ["lib/*.jar", "resources/*.png"]
# Ship the canonical registered-function list inside the bench package so the heavy
# vs light comparison (spec.registered_rst) works when installed without the repo
# tree (e.g. the wheel on a cluster). Kept in sync with the canonical
# docs/tests-function-info/registered_functions.txt by check-binding-parity.py.
"databricks.labs.gbx.bench" = ["registered_functions.txt"]

[tool.setuptools.dynamic]
version = {attr = "databricks.labs.gbx.__version__"}

[tool.black]
line-length = 88
target-version = ["py310", "py312"]
include = '\.pyi?$'
extend-exclude = '/(\.git|__pycache__|dist)/'

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_first_party = ["databricks"]
default_section = "THIRDPARTY"

[tool.flake8]
# E203/E704/W503 are the standard black-compatibility exclusions (black emits
# one-line `def f(): ...` stubs for Protocol methods, which trip E704).
ignore = ["E203", "E266", "E501", "E704", "W503"]
max-line-length = 88
max-complexity = 20
select = ["B", "C", "E", "F", "W", "T4"]
exclude = [".git", "__pycache__", "docs/conf.py", "dist"]
