[project]
name = "geobrix"
authors = [
    { name = "Michael Johns" },
    { name = "Stuart Lynn" },
    { email = "labs@databricks.com"}
]
dynamic = ["version"]
description = "GeoBriX: A high-performance spatial processing library for Apache Spark."
readme = "README.md"
requires-python = ">=3.10, <3.13"

# PEP 639 SPDX expression form. setuptools >=77 deprecated the table form
# (`{ text = ... }` / `{ file = ... }`) and warns on every build by 2027-Feb-18.
# Proprietary licenses use the `LicenseRef-<id>` namespace per PEP 639;
# canonical license text lives in ../../LICENSE at the repo root.
license = "LicenseRef-Databricks-Proprietary"
classifiers = [
    # PEP 639: License classifiers are forbidden once `project.license` is a SPDX
    # expression — setuptools >=77 raises InvalidConfigError on overlap.
    # The license is expressed above via `license = "LicenseRef-Databricks-Proprietary"`.
    "Topic :: Scientific/Engineering :: GIS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    'Operating System :: OS Independent'
]
dependencies = [
    "pyspark>=4.0.0",
]

[project.urls]
Homepage = "https://databricks.com/learn/labs"
Repository = "https://github.com/databrickslabs/geobrix"
Documentation = "https://databrickslabs.github.io/geobrix/"

[project.optional-dependencies]
dev = [
    "isort",
    "black",
    "flake8",
    "flake8-pyproject",
    "build",
]
test = [
    "pytest>=7.0",
    "shapely>=2.0.0",
    "rasterio>=1.3.0",
    "numpy>=1.24.0",
    # pyvx (light VectorX / MVT) tests use mapbox-vector-tile as the decode
    # oracle. Pinned to 2.1.x — see the [light] extra for why (protobuf <6 on
    # Serverless). 2.1.0 still has the 2.x native-typed-attribute encode API.
    "mapbox-vector-tile>=2.1,<2.2",
]
# Runtime deps for the lightweight pure-Python/PySpark APIs (no JAR) — the umbrella
# extra covering all light tiers (raster today; vector/grid as they land). Install
# with `pip install geobrix[light]`.
# pandas + pyarrow are required by pyspark pandas_udf (Arrow batch serialization);
# base pyspark does NOT pull them, so without these the rst_* wrappers fail to
# import (_udf.py imports pandas) / at first invocation with a cryptic ImportError.
light = [
    "rasterio>=1.3.0",
    "shapely>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pyarrow>=11.0.0",
    "scipy>=1.11.0",
    "numexpr>=2.8.0",
    # rio-tiler 9 uses TypedDict(extra_items=...) (PEP 728), which needs a recent
    # typing_extensions; DBR 17.3 ships an older one, so pin the floor explicitly
    # or the [light] import fails on-cluster (rio_tiler/types.py TypeError).
    "typing_extensions>=4.13",
    # Exclude rio-tiler 9.3.0: it regressed the PEP 728 TypedDict(extra_items=...)
    # import on Python 3.12 (Serverless env v5) — `import rio_tiler` raises
    # TypeError even with typing_extensions>=4.13 present. 9.2.1 imports cleanly.
    # Revisit the <9.3 cap once a fixed 9.3.x ships.
    "rio-tiler>=9.0,<9.3",
    # rio-tiler -> httpx -> httpcore (which needs h11>=0.16). DBR ships an older
    # httpcore 1.0.2 (pinned h11<0.15) that %pip leaves in place, so it conflicts
    # with the h11>=0.16 the stack pulls. Force httpcore>=1.0.9 so the on-cluster
    # install resolves cleanly (no h11 conflict warning).
    "httpcore>=1.0.9",
    # idna is a transitive dep (requests / anyio / httpx) with no upper bound, so
    # pip would pull the latest (3.18) and shadow Serverless v5's base idna 3.7,
    # firing the "a core Python package changed: idna" notebook notice. Nothing in
    # the stack needs >3.7 (requests <4,>=2.5; anyio >=2.8; httpx unpinned), so cap
    # at <3.8 to keep the Serverless base in place and silence the notice.
    "idna<3.8",
    "rio-cogeo>=7.0,<8",
    "h3>=4.0,<5",
    "quadbin>=0.2,<0.3",
    # Protomaps PMTiles archive writer/reader (pure-Python) for the pmtiles_gbx
    # tiled-output backend. Writer needs ascending tileid; Reader used in tests.
    "pmtiles>=3.4,<4",
    # OGR-free vector reading for the light *_gbx vector DataSources. pyogrio
    # bundles its own libgdal; pyproj (pulled by pyogrio) maps CRS->srid/proj4.
    "pyogrio>=0.12,<1",
    # Cap pyproj: a floor-only, native-PROJ-tied dep that floats to "latest" on
    # Serverless (not held by the immutable base) — same float-and-break risk as
    # rio-tiler 9.3.0. No 4.x exists yet, so <4 is a no-op today but future-proofs.
    "pyproj>=3.6,<4",
    # mapbox-vector-tile pinned to 2.1.x for the pyvx MVT encoder. Why this exact
    # range matters on Databricks **Serverless** (env v5, the lightweight "halo"
    # target): the resolver otherwise grabs 2.2.0, which hard-requires
    # protobuf>=6.31.1 and so upgrades the immutable base protobuf 5.29.4 -> 6.x.
    # protobuf 6 conflicts with Serverless's Spark-Connect/gRPC stack
    # (grpcio-status / googleapis-common-protos pin protobuf<6); pip emits an
    # ERROR-prefixed conflict report that the Serverless %pip magic treats as a
    # hard install failure (verified on env v5). **2.1.0 keeps protobuf at the
    # base 5.29.4** (verified: clean install, MVT encodes via the same 2.x
    # default_options/native-typed-attr API), so it installs and runs on
    # Serverless. Do NOT widen to <3 (pulls 2.2.0 -> protobuf 6) or down to <2.1
    # (2.0.x downgrades protobuf to 4.25.9). 1.x lacks the 2.x encode API.
    "mapbox-vector-tile>=2.1,<2.2",
    "scikit-image>=0.22,<1",
    "xarray-spatial>=0.4,<1",
]
# For sample-data bundle uploads to Unity Catalog Volumes and gbx:test:bundle-databricks
databricks = [
    "databricks-sdk",
]
# Overture Maps data source (gbx.sample.overture): static-STAC catalog traversal.
# pystac is the static-catalog reader; geopandas/pyarrow (in [light]) do parquet read.
overture = [
    "pystac>=1.9,<2",
    "overturemaps>=0.13",
]
# STAC catalog client (lightweight): distributed search + resilient download + repair.
# Optional extra so [light] users who don't need STAC don't pull pystac/planetary-computer.
stac = [
    "pystac-client>=0.7,<1",
    "planetary-computer>=1.0,<2",
    "tenacity>=8,<10",
    "requests>=2.25",
]
# Visualization helpers (gbx.vizx): matplotlib raster rendering + geopandas map
# adapters, interactive MapLibre GL viewer (anywidget), and tippecanoe-based
# tile simplification.  Optional so [light] users who don't visualize don't
# pull the GUI stack.  Package code imports only matplotlib + geopandas at
# module level; anywidget, tippecanoe, and mapclassify are optional at call time.
vizx = [
    "matplotlib>=3.7,<4",
    "geopandas>=1.0,<2",
    "mapclassify>=2.6,<3",
    "contextily>=1.5,<2",
    "anywidget>=0.9,<1",
    "tippecanoe>=2.45,<3",
]

[tool.coverage.run]
# Exclude sample-data bundle from coverage total so reported % reflects main library (gridx, rasterx, vectorx)
# Multiple patterns ensure exclusion when paths are relative (src/...) or absolute; required for CI and local.
omit = [
    "*sample/_bundle.py",
    "*_bundle.py",
    "src/databricks/labs/gbx/sample/_bundle.py",
    "databricks/labs/gbx/sample/_bundle.py",
    "python/geobrix/src/databricks/labs/gbx/sample/_bundle.py",
]

[tool.coverage.report]
exclude_lines = ["pragma: no cover"]

[tool.pytest.ini_options]
pythonpath = [ "src", "." ]
markers = [
    "integration: tests that need network or long-running setup (excluded from CI)",
]
filterwarnings = [
    "ignore:Support for class-based .* config.* deprecated:",
    "ignore:Neither gdal.UseExceptions:FutureWarning",
]

[build-system]
requires = ["setuptools>=61.2", "wheel"]

[tool.setuptools]
include-package-data = false

# databricks.labs.* must be PEP 420 namespace packages (no __init__.py at
# databricks/ or databricks/labs/) so they coexist with databricks-sdk /
# databricks-connect, which share the `databricks` namespace. find_namespace
# discovery includes the gbx subpackages without those shadowing __init__ files.
[tool.setuptools.packages.find]
where = ["src"]
# Only the gbx subtree is a real package; databricks/ and databricks/labs/ stay
# pure PEP 420 namespace dirs (no __init__.py, not listed) so setuptools doesn't
# synthesize empty __init__.py for them in the wheel (which would re-shadow
# databricks-sdk). namespaces=true keeps PEP 420 discovery for the subtree.
include = ["databricks.labs.gbx*"]
namespaces = true

[tool.setuptools.package-data]
geobrix = ["lib/*.jar", "resources/*.png"]
# Ship the canonical registered-function list inside the bench package so the heavy
# vs light comparison (spec.registered_rst) works when installed without the repo
# tree (e.g. the wheel on a cluster). Kept in sync with the canonical
# docs/tests-function-info/registered_functions.txt by check-binding-parity.py.
"databricks.labs.gbx.bench" = ["registered_functions.txt"]

[tool.setuptools.dynamic]
version = {attr = "databricks.labs.gbx.__version__"}

[tool.black]
line-length = 88
target-version = ["py310", "py312"]
include = '\.pyi?$'
extend-exclude = '/(\.git|__pycache__|dist)/'

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_first_party = ["databricks"]
default_section = "THIRDPARTY"

[tool.flake8]
# E203/E704/W503 are the standard black-compatibility exclusions (black emits
# one-line `def f(): ...` stubs for Protocol methods, which trip E704).
ignore = ["E203", "E266", "E501", "E704", "W503"]
max-line-length = 88
max-complexity = 20
select = ["B", "C", "E", "F", "W", "T4"]
exclude = [".git", "__pycache__", "docs/conf.py", "dist"]
